# wazuh-indexer-operator

./: .custom_wordlist.txt  .gitignore  .lycheeignore  CHANGELOG-FORK.md  CONTRIBUTING.md  README.md  charmcraft-24.04.patch  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  spread.yaml  tox.ini
.github/: actionlint.yaml  pull_request_template.md
.github/workflows/: ci.yaml  docs.yaml  integration_test.yaml  markdown-style-checks.yml  release.yaml  sync_docs.yaml  terraform-docs.yaml  test_prometheus_rules.yaml  tics_run_sh_ghaction_test.yml
docs/: .custom_wordlist.txt  .pymarkdown.yml  changelog-fork.md  changelog.md  conf.py  how-to.md  index.md  overview.md  reference.md  revision-168.md  tutorial.md
docs/explanation/: e-cryptography.md  e-security.md  index.md
docs/explanation/security/: cryptography.md  index.md
docs/how-to/: access-using-oauth.md  enable-jwt-authentication.md  h-attached-storage.md  h-deploy-lxd.md  h-integrate.md  h-large-deployment.md  h-minor-upgrade.md  h-monitoring-enable.md  h-monitoring.md  h-rotate-tls-ca-certificates.md  index.md  integrate-with-an-application.md  optimize-cluster-performance.md  recover-from-attached-storage.md  scale-horizontally.md
docs/how-to/back-up-and-restore/: configure-azure-storage.md  configure-s3.md  create-a-backup.md  index.md  migrate-a-cluster.md  restore-a-local-backup.md
docs/how-to/deploy/: deploy-on-lxd.md  index.md  launch-a-large-deployment.md
docs/how-to/monitoring-cos/: enable-cos.md  index.md  perform-load-testing.md
docs/how-to/tls-encryption/: enable-tls-encryption.md  index.md  rotate-tls-ca-certificates.md
docs/how-to/upgrade/: index.md  perform-a-minor-rollback.md  perform-a-minor-upgrade.md
docs/reference/: index.md  software-testing.md  system-requirements.md
docs/reference/release-notes/: index.md  revision-168.md  revision-315.md
docs/tutorial/: 1-set-up-the-environment.md  2-deploy-opensearch.md  3-enable-encryption.md  4-integrate-with-a-client-application.md  5-manage-passwords.md  6-scale-horizontally.md  7-clean-up-the-environment.md  index.md  t-clean-up.md  t-integrate.md
src/: charm.py  machine_upgrade.py  opensearch.py  upgrade.py
src/alert_rules/prometheus/: prometheus_alerts.yaml
terraform/charm/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/charm/large_deployment/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/charm/simple_deployment/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/product/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/product/large_deployment/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/product/simple_deployment/: README.md  main.tf  variables.tf  versions.tf
tests/: helpers.py
tests/integration/: conftest.py  helpers.py  helpers_deployments.py  lxc-snap-base-workaround.sh  test_charm.py
tests/integration/ha/: conftest.py  helpers.py  test_backups.py  test_ha.py  test_ha_multi_clusters.py  test_ha_networking.py  test_horizontal_scaling.py  test_large_deployments_cluster_manager_only_nodes.py  test_large_deployments_inherit_cluster_name.py  test_large_deployments_relations.py  test_large_deployments_remove_orchestrators.py  test_large_deployments_validate_cm_count.py  test_roles_managements.py  test_scale_to_one_and_back.py  test_storage.py
tests/integration/large_deployments/: conftest.py  test_failover_promotion_cross_model_relations.py  test_orchestration.py
tests/integration/plugins/: helpers.py  test_plugins.py
tests/integration/profiles/: test_profiles.py
tests/integration/relations/: conftest.py  helpers_jwt.py  test_jwt_auth.py  test_oauth.py  test_opensearch_provider.py
tests/integration/spaces/: test_wrong_space.py
tests/integration/tls/: helpers.py  test_ca_rotation.py  test_manual_tls.py  test_tls.py
tests/integration/upgrades/: helpers.py  (+2 more)
tests/unit/: conftest.py  helpers.py  test_charm.py
(+80 files in other folders)
