[tool.poetry.dependencies]
python = "^3.10"
ops = ">=2.19.0"
tenacity = "^8.2.3"
boto3 = "^1.34.135"
overrides = "^7.7.0"
requests = "2.32.3"
# Official name: ruamel.yaml, but due to Poetry GH#109 - replace dots with dashs
ruamel-yaml = "0.18.6"
shortuuid = "1.0.13"
jproperties = "2.1.1"
pydantic = "^1.10.17, <2"
cryptography = "^43.0.0"
jsonschema = "^4.23.0"
data-platform-helpers = "^0.1.4"
poetry-core = "<2.0.0"
